--- a/html/index.css
+++ b/html/index.css
@@ -19,7 +19,8 @@ img.header-logo {
   border-radius: 1rem;
   padding: .5rem;
   position: relative;
-  width: 350px;
+  min-width: 350px;
+  width: 30%;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -39,11 +40,20 @@ img.header-logo {
 }
 
 .overview-list-item {
+  cursor: pointer;
   height: 76px;
   padding: .5rem;
   background-color: #555;
   box-shadow: 2px 2px 3px #333;
   user-select: none;
+}
+
+.overview-list-item:hover {
+  background-color: #5a5a5a;
+}
+
+.overview-list-item:active {
+  background-color: #505050;
 }
 
 .overview-list-item-content {
@@ -67,6 +77,7 @@ img.header-logo {
   border-radius: 10px;
   box-shadow: inset 0 0 4px #333;
   margin-bottom: 5px;
+  transition: ease-out .1s;
 }
 
 .overview-list-item-content-tab-id {
