--- a/html/index.css
+++ b/html/index.css
@@ -17,7 +17,7 @@ img.header-logo {
 .overview-content {
   background: #777;
   border-radius: 1rem;
-  padding: .5rem;
+  padding: 0.5rem;
   position: relative;
   min-width: 350px;
   width: 30%;
@@ -31,7 +31,7 @@ img.header-logo {
 }
 
 .overview-list-item:not(:last-child) {
-  margin-bottom: .4rem;
+  margin-bottom: 0.4rem;
 }
 
 .overview-list-item:last-child {
@@ -42,7 +42,7 @@ img.header-logo {
 .overview-list-item {
   cursor: pointer;
   height: 76px;
-  padding: .5rem;
+  padding: 0.5rem;
   background-color: #555;
   box-shadow: 2px 2px 3px #333;
   user-select: none;
@@ -63,7 +63,7 @@ img.header-logo {
 }
 
 .overview-list-item-progress {
-  margin-top: .15rem;
+  margin-top: 0.15rem;
   height: 8px;
   width: 100%;
   background: #666;
@@ -77,7 +77,7 @@ img.header-logo {
   border-radius: 10px;
   box-shadow: inset 0 0 4px #333;
   margin-bottom: 5px;
-  transition: ease-out .1s;
+  transition: ease-out 0.1s;
 }
 
 .overview-list-item-content-tab-id {
@@ -96,7 +96,7 @@ img.header-logo {
   flex-direction: column;
   justify-content: space-evenly;
   width: 100%;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .overview-list-item-content-thumbnail {
@@ -109,4 +109,3 @@ img#maxresdefault {
   width: auto;
   aspect-ratio: 16/9;
 }
-
